[metadata]
name = awkward
url = https://github.com/scikit-hep/awkward-1.0
project_urls =
  Documentation = https://awkward-array.org
  Source Code = https://github.com/scikit-hep/awkward-1.0
  Bug Tracker = https://github.com/scikit-hep/awkward-1.0/issues
  Discussions = https://github.com/scikit-hep/awkward-1.0/discussions
  Chat = https://gitter.im/Scikit-HEP/awkward-array
  Releases = https://github.com/scikit-hep/awkward-1.0/releases
author = Jim Pivarski
author_email = pivarski@princeton.edu
maintainer = Scikit-HEP
maintainer_email = scikit-hep-admins@googlegroups.com
version = file: VERSION_INFO
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development
    Topic :: Utilities
license = BSD 3-clause
description = Manipulate JSON-like data with NumPy-like idioms.
long_description = file: README-pypi.md
long_description_content_type = text/markdown

[options]
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
packages = find:
package_dir =
    =src
include_package_data = True
zip_safe = False

[options.packages.find]
where = src
exclude =
    awkward_cuda_kernels

[options.entry_points]
numba_extensions =
    init = awkward._connect._numba:register


[tool:pytest]
norecursedirs = src pybind11 rapidjson dependent-project studies

[flake8]
select = C,E,F,W,B,B9,T
# F401 can be fixed by adding __all__'s
# E712 should be dropped, False/True should compared by "is" or checked as booleans, but not "=="
# E711 should be dropped, always compare None with is, not ==.
# F841 should be removed, use nothing or _ or _<name> for an unused variable
# E402 can be improved in the future with isort
# F403 should be removed, import * is evil
# B007 should be removed, variables that are not used should start with _
ignore = E203, W503, E501, E266, N801, N802, N806, B950, F401, E711, E712, F841, E402, F403, B007
max-complexity = 100
exclude = studies, pybind11, rapidjson, dlpack, docs-*
per-file-ignores =
    tests/*: T
    dependent-project/*: T
    dev/*: T
    setup.py: T
    localbuild.py: T
