[metadata]
name = awkward
version = file: VERSION_INFO
description = Manipulate JSON-like data with NumPy-like idioms.
long_description = file: README-pypi.md
long_description_content_type = text/markdown
url = https://github.com/scikit-hep/awkward-1.0
author = Jim Pivarski
author_email = pivarski@princeton.edu
maintainer = Scikit-HEP
maintainer_email = scikit-hep-admins@googlegroups.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development
    Topic :: Utilities
project_urls =
    Documentation = https://awkward-array.readthedocs.io
    Source Code = https://github.com/scikit-hep/awkward-1.0
    Bug Tracker = https://github.com/scikit-hep/awkward-1.0/issues
    Discussions = https://github.com/scikit-hep/awkward-1.0/discussions
    Chat = https://gitter.im/Scikit-HEP/awkward-array
    Releases = https://github.com/scikit-hep/awkward-1.0/releases

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src
exclude =
    awkward_cuda_kernels

[options.entry_points]
numba_extensions =
    init = awkward.numba:_register
