[metadata]
name = awkward
version = file: VERSION_INFO
description = Manipulate JSON-like data with NumPy-like idioms.
long_description = file: README-pypi.md
long_description_content_type = text/markdown
url = https://github.com/scikit-hep/awkward-1.0
author = Jim Pivarski
author_email = pivarski@princeton.edu
maintainer = Scikit-HEP
maintainer_email = scikit-hep-admins@googlegroups.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development
    Topic :: Utilities
project_urls =
    Documentation = https://awkward-array.readthedocs.io
    Source Code = https://github.com/scikit-hep/awkward-1.0
    Bug Tracker = https://github.com/scikit-hep/awkward-1.0/issues
    Discussions = https://github.com/scikit-hep/awkward-1.0/discussions
    Chat = https://gitter.im/Scikit-HEP/awkward-array
    Releases = https://github.com/scikit-hep/awkward-1.0/releases

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src
exclude =
    awkward_cuda_kernels

[options.entry_points]
numba_extensions =
    init = awkward.numba:_register

[flake8]
extend-select = C,B,B9,T,AK1
extend-ignore = E203,E501,B950,E266
max-complexity = 100
exclude = studies, pybind11, rapidjson, docs-*, src/awkward/_typeparser/generated_parser.py, awkward/_typeparser/generated_parser.py
per-file-ignores =
    tests/*: T, AK1
    dev/*: T, T201, AK1
    setup.py: T, T201, AK1
    localbuild.py: T, T201, AK1
    src/awkward/__init__.py: E402, F401, F403, AK1
    awkward/__init__.py: E402, F401, F403, AK1
    src/awkward/__init__.py: F401, F403
    awkward/__init__.py: F401, F403
    src/awkward/operations/__init__.py: F401
    awkward/operations/__init__.py: F401
    src/awkward/_connect/numba/*: AK1
    src/awkward/[!_]*: AK1
    src/awkward/_[!v]*: AK1

[flake8:local-plugins]
extension =
    AK1 = flake8_awkward:AwkwardASTPlugin
paths =
    ./dev/
